fixing flex layout height (align-items: end)

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -80,6 +80,7 @@ p, h1 {
   position: relative;
   z-index: 9;
   .hold {
+    align-items: end;
     color: #fff;
     display: flex;
     position: relative;
